Resolved issue with vertical alignment
git-svn-id: svn+ssh://svn.code.sf.net/p/opennode2/src/trunk@1374 a46bb6aa-65bc-42c6-9d02-ca0d7e7f78c4

--- a/java/node-ng/node-web/src/main/java/com/windsor/node/web/theme/less/tables.less
+++ b/java/node-ng/node-web/src/main/java/com/windsor/node/web/theme/less/tables.less
@@ -20,8 +20,12 @@
     margin-bottom: @density-xlarge;
 
     td {
-      vertical-align: top;
+      vertical-align: middle;
       padding: @density-large;
+    }
+
+    td.align-top {
+      vertical-align: top;
     }
 
     tr.headers {
